; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_vm_region_recurse.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_vm_region_recurse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_MAP_NULL = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_vm_region_recurse(i64 %0, i64* %1, i64* %2, i32* %3, i64 %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store i64 %0, i64* %8, align 8
  store i64* %1, i64** %9, align 8
  store i64* %2, i64** %10, align 8
  store i32* %3, i32** %11, align 8
  store i64 %4, i64* %12, align 8
  store i32* %5, i32** %13, align 8
  %17 = load i64, i64* @VM_MAP_NULL, align 8
  %18 = load i64, i64* %8, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %6
  %21 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %21, i32* %7, align 4
  br label %38

22:                                               ; preds = %6
  %23 = load i64*, i64** %9, align 8
  %24 = load i64, i64* %23, align 8
  store i64 %24, i64* %14, align 8
  %25 = load i64*, i64** %10, align 8
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %15, align 8
  %27 = load i64, i64* %8, align 8
  %28 = load i32*, i32** %11, align 8
  %29 = load i64, i64* %12, align 8
  %30 = trunc i64 %29 to i32
  %31 = load i32*, i32** %13, align 8
  %32 = call i32 @vm_map_region_recurse_64(i64 %27, i64* %14, i64* %15, i32* %28, i32 %30, i32* %31)
  store i32 %32, i32* %16, align 4
  %33 = load i64, i64* %14, align 8
  %34 = load i64*, i64** %9, align 8
  store i64 %33, i64* %34, align 8
  %35 = load i64, i64* %15, align 8
  %36 = load i64*, i64** %10, align 8
  store i64 %35, i64* %36, align 8
  %37 = load i32, i32* %16, align 4
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %22, %20
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @vm_map_region_recurse_64(i64, i64*, i64*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
